--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -4,7 +4,7 @@
   <!-- Navbar brand -->
   <mdb-navbar-brand>
       <a class="navbar-brand" routerLink="/">
-          <img src="https://mdbootstrap.com/img/Marketing/other/logo/logo-mdb-angular-small.png" height="30" alt="">
+          <img src="assets/images/Vision01.png" height="40"  alt="">
       </a>
   </mdb-navbar-brand>
 
