--- a/src/app/shared/components/project/project.component.html
+++ b/src/app/shared/components/project/project.component.html
@@ -1,6 +1,6 @@
 <mdb-card>
   <!--Card image-->
-  <mdb-card-img *ngIf="project.photoUrl" src="{{ project.photoUrl }}" alt="Card image cap" class="waves-light"
+  <mdb-card-img *ngIf="project.photoUrl" src="{{ project.photoUrl }}" width="100%" height="15vw"  object-fit="cover"  alt="Card image cap" class="waves-light"
     mdbWavesEffect></mdb-card-img>
   <!-- <mdb-card-img *ngIf="!project.photoUrl" src="https://mdbootstrap.com/img/Photos/Lightbox/Thumbnail/img%20(97).jpg" alt="Card image cap"></mdb-card-img> -->
   <!--Card content-->
