--- a/src/app/core/welcome/welcome.component.scss
+++ b/src/app/core/welcome/welcome.component.scss
@@ -2,3 +2,8 @@
     font-size: 3.5rem;
     font-weight: 100;
 }
+
+
+.welcome {
+    background-image: url("https://cdn.jsdelivr.net/gh/stanleynga/ng_smartcom@master/src/assets/images/BlackHole.jpg");
+}
