--- a/src/app/core/welcome/welcome.component.html
+++ b/src/app/core/welcome/welcome.component.html
@@ -1,10 +1,10 @@
-<div class="container full-page-container">
+<div class="container full-page-container welcome">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-md-8 text-center fadeIn animated">
-      <h1 class="app-heading mb-4">MDB Angular Boilerplate</h1>
-      <a mdbBtn color="primary" size="lg" class="mb-2" routerLink="/register">Create account</a>
+      <h1 class="app-heading mb-4">Covid-safe workspaces</h1>
+      <a mdbBtn color="primary" size="lg" class="mb-2" routerLink="/register">Register to view...</a>
       <p>
-        <small>Already have an account?
+        <small>Already registered?
           <a routerLink="/login">Log in</a></small>
       </p>
     </div>
