--- a/src/app/core/welcome/welcome.component.scss
+++ b/src/app/core/welcome/welcome.component.scss
@@ -6,7 +6,9 @@
 
 
 .welcome {
-    background-image: url("https://cdn.jsdelivr.net/gh/stanleynga/ng_smartcom@master/src/assets/images/BlackHole.jpg");
+    background-image: url("https://cdn.jsdelivr.net/gh/stanleynga/ng_smartcom@master/src/assets/images/BlackHole02.jpg");
+
+    background-size: contain;
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-position: center;
