--- a/src/app/core/main/main.component.html
+++ b/src/app/core/main/main.component.html
@@ -1,35 +1,29 @@
 <div class="container py-5">
   <div class="row">
     <div class="col-md-6">
-      <mdb-card class="animated fadeIn mb-3" borderColor="border-warning">
-        <mdb-card-header>App section</mdb-card-header>
+      <mdb-card class="animated fadeIn mb-3" borderColor="silver">
+        <mdb-card-header>Covid safety</mdb-card-header>
         <mdb-card-body class="p-3">
           <mdb-card-title>
-            <h5 class="mb-3">Projects</h5>
+            <h5 class="mb-3">Pilot Projects</h5>
           </mdb-card-title>
-          <mdb-card-text>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi blanditiis, assumenda dolorem
-            possimus id qui ut eaque. Similique porro labore commodi impedit deserunt? Officiis nihil rem aut molestias
-            illum eos! Similique accusantium reprehenderit necessitatibus quo totam provident laudantium recusandae
-            sapiente, nemo ex illum nobis, officia, vero dolores! Distinctio similique pariatur, at sint nemo quidem
-            commodi vel rerum aliquid quibusdam? Perferendis.</mdb-card-text>
-          <a routerLink="/projects" mdbBtn color="orange">Go to section</a>
+          <mdb-card-text>We are pioneering covid safe work spaces for tech teams to work productively in close proximity.</mdb-card-text>
+          <a routerLink="/projects" mdbBtn color="black">View our projects</a>
         </mdb-card-body>
       </mdb-card>
     </div>
 
     <div class="col-md-6">
-      <mdb-card class="animated fadeIn mb-3" borderColor="border-warning">
-        <mdb-card-header>App section</mdb-card-header>
+      <mdb-card class="animated fadeIn mb-3" borderColor="silver">
+        <mdb-card-header>Customers</mdb-card-header>
         <mdb-card-body class="p-3">
+          <!--
           <mdb-card-title>
             <h5 class="mb-3">Tables</h5>
           </mdb-card-title>
-          <mdb-card-text>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi blanditiis, assumenda dolorem
-            possimus id qui ut eaque. Similique porro labore commodi impedit deserunt? Officiis nihil rem aut molestias
-            illum eos! Similique accusantium reprehenderit necessitatibus quo totam provident laudantium recusandae
-            sapiente, nemo ex illum nobis, officia, vero dolores! Distinctio similique pariatur, at sint nemo quidem
-            commodi vel rerum aliquid quibusdam? Perferendis.</mdb-card-text>
-          <a routerLink="/customers" mdbBtn color="orange">Go to section</a>
+          -->
+          <mdb-card-text>Pilot customers working with us.</mdb-card-text>
+          <a routerLink="/customers" mdbBtn color="black">View customers</a>
         </mdb-card-body>
       </mdb-card>
     </div>
@@ -37,7 +31,7 @@
   <div class="row">
 
     <div class="col-md-6">
-      <mdb-card class="animated fadeIn mb-3" borderColor="border-warning">
+      <mdb-card class="animated fadeIn mb-3" borderColor="silver">
         <mdb-card-header>App section</mdb-card-header>
         <mdb-card-body class="p-3">
           <mdb-card-title>
@@ -54,7 +48,7 @@
     </div>
 
     <div class="col-md-6">
-      <mdb-card class="animated fadeIn mb-3" borderColor="border-warning">
+      <mdb-card class="animated fadeIn mb-3" borderColor="silver">
         <mdb-card-header>App section</mdb-card-header>
         <mdb-card-body class="p-3">
           <mdb-card-title>
