--- a/src/app/core/main/main.component.html
+++ b/src/app/core/main/main.component.html
@@ -32,17 +32,15 @@
 
     <div class="col-md-6">
       <mdb-card class="animated fadeIn mb-3" borderColor="silver">
-        <mdb-card-header>App section</mdb-card-header>
+        <mdb-card-header>Charts</mdb-card-header>
         <mdb-card-body class="p-3">
+          <!--
           <mdb-card-title>
             <h5 class="mb-3">Charts</h5>
           </mdb-card-title>
-          <mdb-card-text>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi blanditiis, assumenda dolorem
-            possimus id qui ut eaque. Similique porro labore commodi impedit deserunt? Officiis nihil rem aut molestias
-            illum eos! Similique accusantium reprehenderit necessitatibus quo totam provident laudantium recusandae
-            sapiente, nemo ex illum nobis, officia, vero dolores! Distinctio similique pariatur, at sint nemo quidem
-            commodi vel rerum aliquid quibusdam? Perferendis.</mdb-card-text>
-          <a routerLink="/charts" mdbBtn color="orange">Go to section</a>
+          -->
+          <mdb-card-text>Place holder for charts.</mdb-card-text>
+          <a routerLink="/charts" mdbBtn color="black">Go to section</a>
         </mdb-card-body>
       </mdb-card>
     </div>
@@ -51,15 +49,13 @@
       <mdb-card class="animated fadeIn mb-3" borderColor="silver">
         <mdb-card-header>App section</mdb-card-header>
         <mdb-card-body class="p-3">
+          <!--
           <mdb-card-title>
             <h5 class="mb-3">Profile</h5>
           </mdb-card-title>
-          <mdb-card-text>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi blanditiis, assumenda dolorem
-            possimus id qui ut eaque. Similique porro labore commodi impedit deserunt? Officiis nihil rem aut molestias
-            illum eos! Similique accusantium reprehenderit necessitatibus quo totam provident laudantium recusandae
-            sapiente, nemo ex illum nobis, officia, vero dolores! Distinctio similique pariatur, at sint nemo quidem
-            commodi vel rerum aliquid quibusdam? Perferendis.</mdb-card-text>
-          <a routerLink="/profile" mdbBtn color="orange">Go to section</a>
+          <mdb-card-text>.</mdb-card-text>
+            -->
+          <a routerLink="/profile" mdbBtn color="black">View your profile</a>
         </mdb-card-body>
       </mdb-card>
     </div>
