--- a/src/app/core/welcome/welcome.component.scss
+++ b/src/app/core/welcome/welcome.component.scss
@@ -9,6 +9,7 @@
     background-color:#fff;
     background-size: contain;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 .welcome1 {
