--- a/src/app/core/welcome/welcome.component.html
+++ b/src/app/core/welcome/welcome.component.html
@@ -1,7 +1,7 @@
 <div class="container full-page-container welcome">
   <div class="row h-100 justify-content-center align-items-center">
     <div class="col-md-8 text-center fadeIn animated">
-      <h1 class="app-heading mb-4">Covid-safe workspaces</h1>
+      <h1 class="app-heading mb-4">Covid-safe<br/>workspaces<br/><br/></h1>
       <a mdbBtn color="primary" size="lg" class="mb-2" routerLink="/register">Register to view...</a>
       <p>
         <small>Already registered?
